# datastructs

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: asprintf.h  posix_dme.h
include/ctools/: array.h  dict.h  json.h  list.h
src/: array.c  asprintf.c  dict.c  internal.h  list.c  memory.c  posix_dme.c
src/json/: core.c  destroy.c  parser.c  stringifier.c
tests/: test0.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c
